fix: Slightly realign FontAwesome icons vertically

--- a/_sass/open-project-base.scss
+++ b/_sass/open-project-base.scss
@@ -18,6 +18,10 @@ abbr {
   cursor: help;
 }
 
+.svg-inline--fa {
+  vertical-align: -.15em;
+}
+
 a {
   &:link, &:hover, &:visited {
     color: $primary-dark-color;
